--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
             <ul class="notes-list">
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">Math Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">Math Notes</a>
                 </li>
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">Science Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">Science Notes</a>
                 </li>
             </ul>
         </div>
@@ -113,11 +113,11 @@
             <ul class="notes-list">
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">History Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">History Notes</a>
                 </li>
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">Geography Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">Geography Notes</a>
                 </li>
             </ul>
         </div>
@@ -126,11 +126,11 @@
             <ul class="notes-list">
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">Physics Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">Physics Notes</a>
                 </li>
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">Chemistry Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">Chemistry Notes</a>
                 </li>
             </ul>
         </div>
@@ -139,11 +139,11 @@
             <ul class="notes-list">
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">Biology Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">Biology Notes</a>
                 </li>
                 <li>
                     <img src="https://img.icons8.com/color/48/000000/pdf-2.png" alt="PDF Icon">
-                    <a href="#" target="_blank">English Notes</a>
+                    <a href="https://drive.google.com/file/d/klklk/view" target="_blank">English Notes</a>
                 </li>
             </ul>
         </div>
