--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+
+<meta name="monetag" content="efe773c80263d176ed41d42723f4708c">
+
+
+
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Notes Viewer</title>
     <style>
